--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -1,103 +1,104 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-    <h2 class="ui header">สร้างกระดาษทำการคัดเลือกราย</h2>
+    <div class="sixteen wide column">
+        <h2 class="ui header">สร้างกระดาษทำการคัดเลือกราย</h2>
 
-    <div class="ui top attached header">
-      <span>สร้างกระดาษทำการคัดเลือกราย</span>
-    </div>
-
-    <div class="ui attached segment">
-
-      <div class="ui form">
-
-        <div class="inline fields">
-          <div class="ten wide field">
-          </div>
-          <div class="six wide field">
-            <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-            <input value="591113-01-00001" readonly="" class="custom-readonly">
-          </div>
+        <div class="ui top attached header">
+            <span>สร้างกระดาษทำการคัดเลือกราย</span>
         </div>
 
-        <div class="inline fields">
-          <div class="thirteen wide field">
-            <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
-            <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="01/2559" readonly="" class="custom-readonly">
-              <button class="ui icon button">
+        <div class="ui attached segment">
+
+            <div class="ui form">
+                <form ngNativeValidate (submit)="onSend()">
+                    <div class="inline fields">
+                        <div class="ten wide field">
+                        </div>
+                        <div class="six wide field">
+                            <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
+                            <input value="591113-01-00001" readonly="" class="custom-readonly">
+                        </div>
+                    </div>
+
+                    <div class="inline fields">
+                        <div class="thirteen wide field">
+                            <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
+                            <div class="four ui action input">
+                                <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
+                                <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
-            </div>
-            <div class="one">
-              <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
-            </div>
-            <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="12/2560" readonly="" class="custom-readonly">
-              <button class="ui icon button">
+                            </div>
+                            <div class="one">
+                                <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
+                            </div>
+                            <div class="four ui action input">
+                                <input type="text" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
+                                <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
-            </div>
-          </div>
-          <div class="eight wide field">
-          </div>
-        </div>
+                            </div>
+                        </div>
+                        <div class="eight wide field">
+                        </div>
+                    </div>
 
-        <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
-          <div class="three wide field">
-            <label>กำหนดเงื่อนไข</label></div>
-          <div class="four wide field">
-            <label>จำนวนเดือนที่ชำระภาษี</label>
-          </div>
-          <div class="two wide field">
-            <input name="" value="">
-          </div>
-          <div class="one wide field">
-            <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
-          </div>
-          <div class="two wide field">
-            <input name="" value="">
-          </div>         
-          <div class="five wide field">
-            <label>ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
-          </div>
-          <div class="two wide field">
-            <input name="" value="">
-          </div>
-          <div class="one wide field">
-            <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
-          </div>
-          <div class="two wide field">
-            <input name="" value="">
-          </div>
-          <div class="two wide field">
-            <a (click)="onDelField(i)" *ngIf="i!==0" style="cursor: pointer;color: red">
-              <i class="minus icon"></i> ลบ
-            </a>
-          </div>
-        </div>
+                    <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
+                        <div class="three wide field">
+                            <label>กำหนดเงื่อนไข</label></div>
+                        <div class="four wide field">
+                            <label>จำนวนเดือนที่ชำระภาษี</label>
+                        </div>
+                        <div class="two wide field">
+                            <input type="number" name="num1{{i}}" [(ngModel)]="num1[i]" [attr.min]="1" [attr.max]="num2[i]-1" [attr.required]="true">
+                        </div>
+                        <div class="one wide field">
+                            <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
+                        </div>
+                        <div class="two wide field">
+                            <input type="number" name="num2{{i}}" [(ngModel)]="num2[i]" [attr.min]="2" [attr.max]="num_month" [attr.required]="true">
+                        </div>
+                        <div class="five wide field">
+                            <label>ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
+                        </div>
+                        <div class="two wide field">
+                            <input type="number" name="percent1{{i}}" [(ngModel)]="percent1[i]" [attr.max]="percent2[i]-0.01" [attr.required]="true">
+                        </div>
+                        <div class="one wide field">
+                            <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
+                        </div>
+                        <div class="two wide field">
+                            <input type="number" name="percent2{{i}}" [(ngModel)]="percent2[i]" [attr.max]="100" [attr.required]="true">
+                        </div>
+                        <div class="two wide field">
+                            <a (click)="onDelField(i)" *ngIf="i!==0" style="cursor: pointer;color: red">
+                                <i class="minus icon"></i> ลบ
+                            </a>
+                        </div>
+                    </div>
 
-        <div class="inline fields">
-          <i class="plus icon"></i>
-          <div class="five wide field ">
-            <a (click)="onAddField()" style="cursor:  pointer;">เพิ่มเงื่อนไข</a>
-          </div>
-        </div>
+                    <div class="inline fields">
+                        <i class="plus icon"></i>
+                        <div class="five wide field ">
+                            <a (click)="onAddField()" style="cursor:  pointer;">เพิ่มเงื่อนไข</a>
+                        </div>
+                    </div>
 
 
-        <div class="ui center aligned grid">
-          <div class="sixteen wide column">
-            <button class="ui mini primary button" routerLink="/working-paper-1-trader">
+                    <div class="ui center aligned grid">
+                        <div class="sixteen wide column">
+                            <button type="submit" class="ui mini primary button">
               <i class="add icon"></i>
               สร้างกระดาษทำการ
             </button>
-            <button class="ui mini button">
+                            <button class="ui mini button">
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-          </div>
-        </div>
-      </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
 
+        </div>
     </div>
-  </div>
 </div>
