--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -39,28 +39,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="inline fields">
-                    <div class="sixteen wide field">
-                        <label class="custom-label-w-25">คำค้นหา </label>
-                        <div class="four ui action input">
-                            <input value="591113-01-00001" class="custom-label-w-25" />
 
-                        </div>
-                        <div class="field">
-                            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                        </div>
-                        <div class="four ui action input">
-                            <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
-                                <i class="add icon"></i>
-                                ค้าหา
-                            </button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
-                                <i class="add icon"></i>
-                                เพิ่มข้อมูล
-                            </button>
-                        </div>
+                <div class="inline fields">
+                    <div class="two  wide field ">
+                        <label>คำค้นหา</label>
+                    </div>
+                    &nbsp;&nbsp;&nbsp;
+                    <div class="seven wide field ">
+                        <input type="text" placeholder="" value="591113-01-00001">
+                    </div>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <div class="seven wide field ">
+                        <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
+                            ค้นหา
+                        </button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
+                            <i class="add icon"></i>
+                            เพิ่มข้อมูล
+                        </button>
                     </div>
                 </div>
+
 
             </div>
             <div class="ui attached segment">
@@ -147,13 +146,13 @@
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
                         <button (click)="onSend();" class="ui mini primary button" routerLink="/create-working-paper-trader">
-            <i class="add icon"></i>
-            สร้างกระดาษทำการคัดเลือกราย
-          </button>
+                            <i class="add icon"></i>
+                            สร้างกระดาษทำการคัดเลือกราย
+                        </button>
                         <button class="ui mini button">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+                            <i class="refresh icon"></i>
+                            ล้างข้อมูล
+                        </button>
                     </div>
 
                 </div>
