add select/show values previous month

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -15,7 +15,12 @@
                         </div>
                         <div class="six wide field">
                             <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-                            <input value="591113-01-00001" readonly="" class="custom-readonly">
+                            <select class="ui dropdown">
+                                <option value="">591113-01-00001</option>
+                                <option value="1">591113-01-00002</option>
+                                <option value="0">591113-01-00003</option>
+                              </select>
+                            <!-- <input value="591113-01-00001" readonly="" class="custom-readonly"> -->
                         </div>
                     </div>
 
