added  and change UI

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -122,19 +122,7 @@
     </div>
 </div>
 
-<div class="ui main container">
-    <message-bar></message-bar>
-    <router-outlet></router-outlet>
-</div>
-
-
-<div class="ui vertical footer" style="background:#1e83db; color: white;">
-    <div class="ui center aligned container">
-        <p>@สงวนลิขสิทธิ์ 2560 กรมสรรพสามิต / เลขที่ 1488 ถนน นครชัยศรี เขตดุสิต กรุงเทพมหานคร 10300</p>
-    </div>
-</div>
-
-<div class="ui mini test modal transition hidden baiwa-confirm-modal">
+<div class="ui mini test modal transition hidden baiwa-confirm-modal" style="height: 25px;">
     <div class="header">
         Delete Your Account
     </div>
@@ -151,9 +139,7 @@
         </div>
     </div>
 </div>
-
-
-<div class="ui tiny test modal transition hidden baiwa-alert">
+<div class="ui tiny test modal transition hidden baiwa-alert" style="height: 25px;">
     <div class="header">
         Delete Your Account
     </div>
@@ -163,6 +149,11 @@
     <div class="actions">
         <div class="ui approve button">OK</div>
     </div>
+</div>
+
+<div class="ui main container">
+    <message-bar></message-bar>
+    <router-outlet></router-outlet>
 </div>
 
 <div id="alert" class="ui mini modal transition hidden">
@@ -176,5 +167,12 @@
         <div class="ui green mini cancel inverted button">
             <i class="remove icon"></i> โอเค
         </div>
+    </div>
+</div>
+
+
+<div class="ui vertical footer" style="background:#1e83db; color: white;">
+    <div class="ui center aligned container">
+        <p>@สงวนลิขสิทธิ์ 2560 กรมสรรพสามิต / เลขที่ 1488 ถนน นครชัยศรี เขตดุสิต กรุงเทพมหานคร 10300</p>
     </div>
 </div>
