--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
@@ -56,8 +56,8 @@
 
     <div class="ui segment">
       <div class="ui grid">
-        <div class="three wide column"></div>
-        <div class="six wide column">
+        <div class="three wide column" style="padding-bottom: 0"></div>
+        <div class="six wide column" style="padding-bottom: 0">
           <button class="ui mini primary button" routerLink="/working-paper-1-trader">
             <i class="list icon"></i>
             แสดงข้อมูลฉบับย่อ
@@ -67,7 +67,7 @@
             แสดงข้อมูลฉบับเต็ม
           </button>
         </div>
-        <div class="seven wide column">
+        <div class="seven wide column" style="padding-bottom: 0">
           <div class="ui form">
             <div class="inline fields">
               <div class="sixteen wide field">
@@ -82,8 +82,8 @@
       </div>
       
       <div class="ui grid">
-        <div class="three wide column">
-          <div class="ui vertical menu">
+        <div class="three wide column" style="padding-right: 0;padding-top: 0;">
+          <div class="ui vertical menu" style="width: auto">
             <div class="item">
               <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
             </div>
@@ -129,8 +129,8 @@
           </div>
         </div>
 
-        <div class="thirteen wide column">
-          <div style="overflow-x: scroll;">
+        <div class="thirteen wide column" style="padding-top: 0">
+          <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
             <table class="ui small celled table center aligned" style="width: 200%;">
               <thead>
                 <tr>
