--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -51,11 +51,11 @@
             </div>
         </div>
 
-        <div class="ui segment">
-            <div class="ui grid">
-                <div class="three wide column"></div>
-                <div class="six wide column">
-                    <button class="ui mini primary button" routerLink="/working-paper-1-trader">
+    <div class="ui segment">
+      <div class="ui grid">
+        <div class="three wide column" style="padding-bottom: 0"></div>
+        <div class="six wide column" style="padding-bottom: 0">
+          <button class="ui mini primary button" routerLink="/working-paper-1-trader">
             <i class="list icon"></i>
             แสดงข้อมูลฉบับย่อ
           </button>
@@ -63,13 +63,13 @@
             <i class="list icon"></i>
             แสดงข้อมูลฉบับเต็ม
           </button>
-                </div>
-                <div class="seven wide column">
-                    <div class="ui form">
-                        <div class="inline fields">
-                            <div class="sixteen wide field">
-                                <label style="width: 5em;">พิกัด</label>
-                                <select class="ui dropdown">
+        </div>
+        <div class="seven wide column" style="padding-bottom: 0">
+          <div class="ui form">
+            <div class="inline fields">
+              <div class="sixteen wide field">
+                <label style="width: 5em;">พิกัด</label>
+                <select class="ui dropdown">
                   <option *ngFor="let item of listItem" value="{{item}}">{{item}}</option>
                 </select>
                             </div>
@@ -78,106 +78,106 @@
                 </div>
             </div>
 
-            <div class="ui grid">
-                <div class="three wide column">
-                    <div class="ui vertical menu">
-                        <div class="item">
-                            <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
-                        </div>
-                        <div class="item">
-                            <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
-                            <div class="menu">
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
-                                <a class="item">-อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</a>
-                                <a class="item">-อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
-                            <div class="menu">
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">ผู้ประกอบการใหม่</div>
-                            <div class="menu">
-                                <a class="item">-ผู้ประกอบการใหม่</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item">-สรุปจำนวนตามพิกัดสินค้า</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item" routerLink="/summary-amount-product-trader">-รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
-                            <div class="menu">
-                                <a class="item">-สร้างบันทึกข้อความขอส่งข้อมูล</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div class="ui grid" style="margin-top: 0">
+        <div class="three wide column" style="padding-right: 0;">
+          <div class="ui vertical menu" style="width: auto">
+            <div class="item">
+              <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
+              <div class="menu">
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
+                <a class="item">-อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</a>
+                <a class="item">-อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
+              <div class="menu">
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการใหม่</div>
+              <div class="menu">
+                <a class="item">-ผู้ประกอบการใหม่</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item">-สรุปจำนวนตามพิกัดสินค้า</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item" routerLink="/summary-amount-product-trader">-รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
+              <div class="menu">
+                <a class="item">-สร้างบันทึกข้อความขอส่งข้อมูล</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
-                <div class="thirteen wide column">
-                    <div style="overflow-x: scroll;">
-                        <table id="userManagementDt" class="ui small celled table  aligned" style="width: 5000px;">
-                            <thead>
-                                <tr>
-                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">พื้นที่</th>
-                                    <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
-                                    <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
-                                    <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
-                                    <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
-                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
-                                    <th rowspan="2" style="text-align: center !important">พิกัด</th>
-                                    <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
-                                    <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี 12 เดือนแรก</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี 12 เดือนหลัง </th>
-                                </tr>
-                                <tr>
-                                    <th style="border-left: 1px solid rgba(34,36,38,.1); text-align: center !important"> 12 เดือนแรก</th>
-                                    <th style="text-align: center !important"> 12 เดือนหลัง </th>
-                                    <th style="text-align: center !important">2558</th>
-                                    <th style="text-align: center !important">2559</th>
-                                    <th style="text-align: center !important"> 2560</th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59</th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
+        <div class="thirteen wide column" style="padding-top: 0">
+          <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
+            <table id="userManagementDt"  class="ui small celled table  aligned" style="width: 5000px;">
+              <thead>
+                <tr>
+                  <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                  <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
+                  <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
+                  <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                  <th rowspan="2" style="text-align: center !important">พื้นที่</th>
+                  <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
+                  <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
+                  <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
+                  <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
+                  <th rowspan="2" style="text-align: center !important">ภาค</th>
+                  <th rowspan="2" style="text-align: center !important">พิกัด</th>
+                  <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
+                  <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
+                  <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
+                  <th colspan="12" style="text-align: center !important">การชำระภาษี 12 เดือนแรก</th>
+                  <th colspan="12" style="text-align: center !important">การชำระภาษี 12 เดือนหลัง </th>
+                </tr>
+                <tr>
+                  <th style="border-left: 1px solid rgba(34,36,38,.1); text-align: center !important"> 12 เดือนแรก</th>
+                  <th style="text-align: center !important"> 12 เดือนหลัง </th>
+                  <th style="text-align: center !important">2558</th>
+                  <th style="text-align: center !important">2559</th>
+                  <th style="text-align: center !important"> 2560</th>
+                  <th style="text-align: center !important">พ.ค. 58</th>
+                  <th style="text-align: center !important">มิ.ย. 58</th>
+                  <th style="text-align: center !important">ก.ค. 58</th>
+                  <th style="text-align: center !important">ส.ค. 58</th>
+                  <th style="text-align: center !important">ก.ย. 58</th>
+                  <th style="text-align: center !important">ต.ค. 58</th>
+                  <th style="text-align: center !important">พ.ย. 58</th>
+                  <th style="text-align: center !important">ธ.ค. 58</th>
+                  <th style="text-align: center !important">ม.ค. 59</th>
+                  <th style="text-align: center !important">ก.พ. 59</th>
+                  <th style="text-align: center !important">มี.ค. 59</th>
+                  <th style="text-align: center !important">เม.ย. 59</th>
+                  <th style="text-align: center !important">พ.ค. 58</th>
+                  <th style="text-align: center !important">มิ.ย. 58</th>
+                  <th style="text-align: center !important">ก.ค. 58</th>
+                  <th style="text-align: center !important">ส.ค. 58</th>
+                  <th style="text-align: center !important">ก.ย. 58</th>
+                  <th style="text-align: center !important">ต.ค. 58</th>
+                  <th style="text-align: center !important">พ.ย. 58</th>
+                  <th style="text-align: center !important">ธ.ค. 58</th>
+                  <th style="text-align: center !important">ม.ค. 59</th>
+                  <th style="text-align: center !important">ก.พ. 59</th>
+                  <th style="text-align: center !important">มี.ค. 59</th>
+                  <th style="text-align: center !important">เม.ย. 59 </th>
 
                                 </tr>
                             </thead>
