add upload file and change to oracle

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -187,7 +187,7 @@
             <div class="one wide field"></div>
             <div class="nine wide field">
               <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-              <input type="file" (change)="readUrl($event)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
+              <input type="file" (change)="readUrl($event, 0)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
               />
             </div>
             <div class="one wide field">
@@ -198,7 +198,7 @@
             <div class="one wide field"></div>
             <div class="nine wide field">
               <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-              <input type="file" (change)="readUrl($event)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
+              <input type="file" (change)="readUrl($event, 1)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
               />
             </div>
             <div class="one wide field">
@@ -209,7 +209,7 @@
             <div class="one wide field"></div>
             <div class="nine wide field">
               <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-              <input type="file" (change)="readUrl($event)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
+              <input type="file" (change)="readUrl($event, 2)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
               />
             </div>
             <div class="one wide field">
