--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -52,7 +52,7 @@
                             ค้นหา
                         </button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <input type="hidden" id="exciseId" value="EX"/>
-                        <button class="ui mini primary button" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value;">
+                        <button id="exciseBtn" class="ui mini primary button" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value;">
                             <i class="add icon"></i>
                             เพิ่มข้อมูล
                         </button>
