--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -39,9 +39,7 @@
                     <div class="one wide field">
                         <label>เดือน</label>
                     </div>
-
                 </div>
-
 
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
@@ -50,7 +48,7 @@
                             วิเคราะห์ข้อมูลเบื้องต้น
                         </button>
                         <!-- routerLink="/analyst-basic-data-trader" -->
-                        <button class="ui mini button">
+                        <button type="reset" class="ui mini button">
                             <i class="refresh icon"></i>
                             ล้างข้อมูล
                         </button>
