--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -122,7 +122,7 @@
     </div>
 </div>
 
-<div class="ui mini test modal transition hidden baiwa-confirm-modal" style="height: 25px;">
+<div class="ui mini test modal transition hidden baiwa-confirm-modal" style="height: 0;">
     <div class="header">
         Delete Your Account
     </div>
@@ -139,7 +139,7 @@
         </div>
     </div>
 </div>
-<div class="ui tiny test modal transition hidden baiwa-alert" style="height: 25px;">
+<div class="ui tiny test modal transition hidden baiwa-alert" style="height: 0;">
     <div class="header">
         Delete Your Account
     </div>
@@ -150,13 +150,7 @@
         <div class="ui approve button">OK</div>
     </div>
 </div>
-
-<div class="ui main container">
-    <message-bar></message-bar>
-    <router-outlet></router-outlet>
-</div>
-
-<div id="alert" class="ui mini modal transition hidden">
+<div id="alert" class="ui mini modal transition hidden" style="height: 0;">
     <div class="ui header">
         เกิดข้อผิดพลาด
     </div>
@@ -170,6 +164,10 @@
     </div>
 </div>
 
+<div class="ui main container">
+    <message-bar></message-bar>
+    <router-outlet></router-outlet>
+</div>
 
 <div class="ui vertical footer" style="background:#1e83db; color: white;">
     <div class="ui center aligned container">
