add data to plan headder

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -68,7 +68,7 @@
                             <div class="item">
                                 <div class="header">พิกัดสินค้า</div>
                                 <div class="menu">
-                                    <a class="item" *ngFor="let item of listMenu">-{{item}}</a>
+                                    <div class="item" *ngFor="let item of listMenu" (click)="selectExciseProductType(item)" >-{{item}}</div>
                                 </div>
                             </div>
                         </div>
