--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-25">เลขที่วิเคราะห์ข้อมูล</label>
-                        <input value="591113-01-00001" readonly="" class="custom-readonly" />
+                        <input value="" readonly="" class="custom-readonly" />
                     </div>
                 </div>
 
@@ -44,7 +44,7 @@
                     </div>
                     &nbsp;&nbsp;&nbsp;
                     <div class="seven wide field ">
-                        <input type="text" placeholder="" value="591113-01-00001">
+                        <input type="text" placeholder="" value="">
                     </div>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <div class="seven wide field ">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
-                        <button (click)="onSend();" class="ui mini primary button" routerLink="/create-working-paper-trader">
+                        <button (click)="onSend();" class="ui mini primary button" >
                             <i class="add icon"></i>
                             สร้างกระดาษทำการคัดเลือกราย
                         </button>
