add some domain and sub module upload

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -183,33 +183,11 @@
               <h4>เพิ่มข้อมูลภายนอก </h4>
             </div>
           </div>
-          <div class="inline fields">
+          <div class="inline fields" *ngFor="let f of excise.file; let i = index">
             <div class="one wide field"></div>
             <div class="nine wide field">
               <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-              <input type="file" (change)="readUrl($event, 0)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
-              />
-            </div>
-            <div class="one wide field">
-              <p>เพิ่ม</p>
-            </div>
-          </div>
-          <div class="inline fields">
-            <div class="one wide field"></div>
-            <div class="nine wide field">
-              <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-              <input type="file" (change)="readUrl($event, 1)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
-              />
-            </div>
-            <div class="one wide field">
-              <p>เพิ่ม</p>
-            </div>
-          </div>
-          <div class="inline fields">
-            <div class="one wide field"></div>
-            <div class="nine wide field">
-              <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-              <input type="file" (change)="readUrl($event, 2)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
+              <input type="file" (change)="readUrl($event, i)" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx"
               />
             </div>
             <div class="one wide field">
